--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Flash BTC Transaction Core",
     "short_name": "FlhBTC",
-    "start_url": "/FLASHBTC-CORE/flashbtc/",
+    "start_url": "/flashbtc/",
     "display": "standalone",
     "background_color": "#000000",
     "description": "Flash BTC Transaction Core",
