--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Flash BTC Transaction Core",
-    "short_name": "FlhBTC",
+    "short_name": "FlashBTC",
     "start_url": "/flashbtc/",
     "display": "standalone",
     "background_color": "#000000",
