--- a/manifest.json
+++ b/manifest.json
@@ -9,17 +9,17 @@
       {
         "src": "homescreen48.png",
         "sizes": "48x48",
-        "type": "image/png"
+        "type": "./FLASHBTC-CORE/image/png"
       },
       {
         "src": "homescreen72.png",
         "sizes": "72x72",
-        "type": "image/png"
+        "type": "./FLASHBTC-CORE/image/png"
       },
       {
         "src": "homescreen96.png",
         "sizes": "96x96",
-        "type": "image/png"
+        "type": "./FLASHBTC-CORE/image/png"
       },
       {
         "src": "homescreen144.png",
@@ -29,12 +29,12 @@
       {
         "src": "homescreen168.png",
         "sizes": "168x168",
-        "type": "image/png"
+        "type": "./FLASHBTC-CORE/image/png"
       },
       {
         "src": "homescreen192.png",
         "sizes": "192x192",
-        "type": "image/png"
+        "type": "./FLASHBTC-CORE/image/png"
       }
     ]
   }
